// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Anchor /> should match snapshot with label, icon and to props 1`] = `
<a
  class="root root_base colours_link_base base base cursorPointer a display_inline"
  href="https://www.autoguru.com.au"
>
  <div
    class="base display_flex position_relative center_mobile_base row_mobile_base flexWrap_wrap 2_mobile_base 2_mobile_base"
  >
    <div
      class="base 2_mobile_base 2_mobile_base display_flex center_mobile_base row_mobile_base flexWrap_nowrap"
    >
      <i
        class="base display_block small_mobile_base root_base colours_link_base base"
        role="presentation"
      >
        <svg
          class="base display_block width_full height_full"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
          />
        </svg>
      </i>
    </div>
    <div
      class="base 2_mobile_base 2_mobile_base display_flex center_mobile_base row_mobile_base flexWrap_nowrap"
    >
      <span
        class="base textAlign_left root_base sizes_4_base colours_link_base fontWeight_bold_base base"
      >
        Hello World!
      </span>
    </div>
  </div>
</a>
`;

exports[`<Anchor /> should match snapshot without label 1`] = `
<a
  class="root root_base colours_link_base base base cursorPointer a display_inline"
>
  <span
    class="base textAlign_left root_base sizes_4_base colours_link_base fontWeight_bold_base base"
  />
</a>
`;

exports[`<Anchor /> when custom component should match snapshot with label, icon custom component 1`] = `
<button
  class="base appearance cursorPointer button none_mobile_base 4_mobile_base none_mobile_base 4_mobile_base display_inlineBlock overflow_hidden textAlign_center border_style none_mobile_base none_mobile_base none_mobile_base none_mobile_base 1_mobile_base root_base root_base sizes_4_base colours_white_base fontWeight_semiBold_base base defaultStates_secondary_base variant_secondary_base size_medium_default_base enabled root root_base colours_link_base base base display_inline"
  type="button"
>
  <div
    class="base height_full center_mobile_base center_mobile_base body_base"
  >
    <div
      class="base display_flex position_relative center_mobile_base row_mobile_base flexWrap_wrap 2_mobile_base 2_mobile_base"
    >
      <div
        class="base 2_mobile_base 2_mobile_base display_flex center_mobile_base row_mobile_base flexWrap_nowrap"
      >
        <i
          class="base display_block small_mobile_base root_base colours_link_base base"
          role="presentation"
        >
          <svg
            class="base display_block width_full height_full"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
            />
          </svg>
        </i>
      </div>
      <div
        class="base 2_mobile_base 2_mobile_base display_flex center_mobile_base row_mobile_base flexWrap_nowrap"
      >
        <span
          class="base textAlign_left root_base sizes_4_base colours_link_base fontWeight_bold_base base"
        >
          Hello World!
        </span>
      </div>
    </div>
  </div>
</button>
`;
